[gd_scene load_steps=7 format=3 uid="uid://bewtm3k3di086"]

[ext_resource type="Script" uid="uid://drlnpsc1bdyv" path="res://scenes/ui/game_over.gd" id="1_fu4wh"]
[ext_resource type="FontFile" uid="uid://dyqtfh8167vds" path="res://assets/ThickThinPixel.ttf" id="2_x6o8e"]

[sub_resource type="LabelSettings" id="LabelSettings_vfrx6"]
font = ExtResource("2_x6o8e")
font_size = 48
font_color = Color(1, 0.48452926, 0.48452926, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o6b8n"]
font = ExtResource("2_x6o8e")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_4583b"]
font = ExtResource("2_x6o8e")
font_size = 48

[sub_resource type="Theme" id="Theme_b6337"]
default_font = ExtResource("2_x6o8e")
default_font_size = 40

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu4wh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.735357, 1, 0.735357, 0.8)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(450, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -175.0
offset_right = 361.0
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_top = 31.0
offset_right = 145.0
offset_bottom = 76.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_vfrx6")
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.532
anchor_right = 0.5
anchor_bottom = 0.532
offset_left = -143.0
offset_top = -140.80801
offset_right = 157.0
offset_bottom = 0.19198608
grow_horizontal = 2
grow_vertical = 2

[node name="RoomsLabel" type="Label" parent="Panel/StatsContainer"]
layout_mode = 2
text = "Rooms:0"
label_settings = SubResource("LabelSettings_o6b8n")

[node name="DiamondsLabel" type="Label" parent="Panel/StatsContainer"]
layout_mode = 2
text = "Diamonds:0"
label_settings = SubResource("LabelSettings_4583b")

[node name="StatsContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = 12.0
offset_right = 172.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2

[node name="SlugsSavedLabel" type="Label" parent="Panel/StatsContainer2"]
layout_mode = 2
text = "Slugs saved:0"
label_settings = SubResource("LabelSettings_o6b8n")

[node name="BirdsSavedLabel" type="Label" parent="Panel/StatsContainer2"]
layout_mode = 2
text = "Birds saved:0"
label_settings = SubResource("LabelSettings_4583b")

[node name="TotalAnimalsSavedLabel" type="Label" parent="Panel/StatsContainer2"]
layout_mode = 2
text = "Total saved:0"
label_settings = SubResource("LabelSettings_4583b")

[node name="OkButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = 50.0
offset_right = 113.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_b6337")
text = "OK"
